# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: app.py  db.py  db_tools.py  url_parsing.py
page_analyzer/templates/: base.html  index.html  main_page.html  url_page.html  urls.html
