[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "first site"
authors = ["Dmitriev"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
flake8 = "^7.1.1"
pytest = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
